sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:14: error: not found: value taille
	if (for (i <- 0 to taille-2) { plusPetit(i,i+1) == true })
                           ^