sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	val taille = getNombreValeurs();
	var min = 0;
	while ( trié == false ) {
	for (i <- 0 to taille-2) {
		if ( plusPetit(i,i+1) == false) {
			echange(i,i+1);
		}
	}
} }

def trié():Boolean = {
	if (for (i <- 0 to taille-2) { plusPetit(i,i+1) == true })
	return true
	else
	return false
}
